Edited the paragraph width and added root variables

--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -321,20 +321,12 @@
 	</section>
 	<div class="stickytitle7"><h3>Conclusion</h3></div>
 	<section class="frontsection5">
-		<p>We have argued that the discipline of design has been superseded by a condition where the conventionally defined design disciplines have been dispersed. Moreover, this reliance on the ‘exhausted’ historic disciplines as the boundary of our understanding has been superseded by an unlimited expanse that we call ‘alterplinarity.’<sup>37</sup> </p>
+		<p>We have argued that the discipline of design has been superseded by a condition where the conventionally defined design disciplines have been dispersed. Moreover, this reliance on the ‘exhausted’ historic disciplines as the boundary of our understanding has been superseded by an unlimited expanse that we call ‘alterplinarity.’</p>
 		<p>As a consequence, this paper presents a manifesto for a future design discipline where the emphasis is on understanding how little we know and recognizing that the unknown is a necessary condition for the beginning of any project. That is, as design researchers and educators, we should focus on what we do not know and move away from current models of design education that largely result in imitation and derivation as the norm, whilst also reminding ourselves that design must be taken seriously at all times.</p>
 		<p>This seriousness is inherent in the new strategy we require for design. A strategy that reconnects design with its historic project</p>
 		<p class="bigtext1">—to imagine change and to answer the unavoidable question—what kind of world do we really want to live in? </p>
 		<p> Contentiously, perhaps, we also propose that we need to object to sustaining everything. Design would be better off rejecting sustainability and concentrating on finding ways of us being together on such a populous planet in such unprecedented proximity staring at many other major crises. As such, design now needs to disrupt, contest, invent, direct, coordinate, respond, provoke and project.</p>
 		<p span id="lastparagraph">The complex and interdependent issues we face today need undisciplined and irresponsible designers who act in productively irresponsible ways. With that stated, we must also endeavor to design with care and remember that, like design, the purpose of care is to affect positively the way we live. Finally, designers need to confront what most of them avoid—the past—and also accept that if design no longer needs an idea, should design still participate in the idea of design?</p>
-
-		<details class="citation-div"> <summary><div id="footnotediv"><a>Conclusion: Footnotes</a><a id="arrow-foot">&#8595;</a></div></summary>
-			<ul class="citation-list">  
-				<li class="footnotes-list">
-				<li class="footnote-item">
-					<p class="footnote"><sup>37</sup> Ibid.</p>
-				</li> 
-			</details>
 	</section>
 
 	<section class="readnext">
