Edited the header animation

--- a/index.html
+++ b/index.html
@@ -26,38 +26,52 @@
 					<!-- </div> -->
 				<div class="crimetext">
 			<div class="crime">
-				<h1><span id="crime">&nbsp;&nbsp;&nbsp;&nbsp;Crime</span></h1>
-				<h1>Crime <span id="crime">Crime</span></h1>
-				<h1>Crime <span id="crime">Crime</span></h1>
-				<h1>Crime <span id="crime">Crime</span></h1>
-				<h1>Crime <span id="crime">Crime</span></h1>
-				<h1>Crime <span id="crime">Crime</span></h1>
+				<h1 class="crimeanimatedtextred">&nbsp;&nbsp;&nbsp;Crime</h1>
+				<h1 class="crimeanimatedtext">Crime</h1>
+				<h1 class="crimeanimatedtextred">Crime</h1>
+				<h1 class="crimeanimatedtext">Crime</h1>
+				<h1 class="crimeanimatedtextred">Crime</h1>
+				<h1 class="crimeanimatedtext">Crime</h1>
+				<h1 class="crimeanimatedtextred">Crime</h1>
+				<h1 class="crimeanimatedtext">Crime</h1>
+				<h1 class="crimeanimatedtextred">Crime</h1>
+				<h1 class="crimeanimatedtext">Crime</h1>
 			</div>
 		    </div>
 			<div class="factorytext">
 			<div class="factory">
-				<h1><span id="factory">&nbsp;&nbsp;&nbsp;&nbsp;Factory</span> Factory</h1>
-				<h1><span id="factory">Factory</span> Factory</h1>
-				<h1><span id="factory">Factory</span> Factory</h1>
-				<h1><span id="factory">Factory</span> Factory</h1>
-				<h1><span id="factory">Factory</span> Factory</h1>
+				<h1 class="factoryanimatedtextyellow">&nbsp;&nbsp;&nbsp;Factory</h1>
+				<h1 class="factoryanimatedtext">Factory</h1>
+				<h1 class="factoryanimatedtextyellow">Factory</h1>
+				<h1 class="factoryanimatedtext">Factory</h1>
+				<h1 class="factoryanimatedtextyellow">Factory</h1>
+				<h1 class="factoryanimatedtext">Factory</h1>
+				<h1 class="factoryanimatedtextyellow">Factory</h1>
 			</div>
 			</div>
 			<div class="disciplinetext">
 			<div class="discipline">
-				<h1><span id="discipline">&nbsp;&nbsp;Discipline</span></h1>
-				<h1>Discipline <span id="discipline">Discipline</span></h1>
-				<h1>Discipline <span id="discipline">Discipline</span></h1>
-				<h1>Discipline <span id="discipline">Discipline</span></h1>
-				<h1>Discipline <span id="discipline">Discipline</span></h1>
+				<h1 class="disciplineanimatedtextpurple">&nbsp;&nbsp;&nbsp;Discipline</h1>
+				<h1 class="disciplineanimatedtext">Discipline</h1>
+				<h1 class="disciplineanimatedtextpurple">Discipline</h1>
+				<h1 class="disciplineanimatedtext">Discipline</h1>
+				<h1 class="disciplineanimatedtextpurple">Discipline</h1>
+				<h1 class="disciplineanimatedtext">Discipline</h1>
+				<h1 class="disciplineanimatedtextpurple">Discipline</h1>
+				<h1 class="disciplineanimatedtext">Discipline</h1>
+				<h1 class="disciplineanimatedtextpurple">Discipline</h1>
 			</div>
 			<div class="disciplinetext">
 					<div class="discipline">
-						<h1>Design <span id="discipline">Evolution</span></h1>
-						<h1>Design <span id="discipline">Evolution</span></h1>
-						<h1>Design <span id="discipline">Evolution</span></h1>
-						<h1>Design <span id="discipline">Evolution</span></h1>
-						<h1>Design <span id="discipline">Evolution</span></h1>
+						<h1 class="evolutionanimatedtextblue">&nbsp;&nbsp;&nbsp;Evolution</h1>
+						<h1 class="evolutionanimatedtext">Evolution</h1>
+						<h1 class="evolutionanimatedtextblue">Evolution</h1>
+						<h1 class="evolutionanimatedtext">Evolution</h1>
+						<h1 class="evolutionanimatedtextblue">Evolution</h1>
+						<h1 class="evolutionanimatedtext">Evolution</h1>
+						<h1 class="evolutionanimatedtextblue">Evolution</h1>
+						<h1 class="evolutionanimatedtext">Evolution</h1>
+						<h1 class="evolutionanimatedtextblue">Evolution</h1>
 					</div>
 					</div>
 			</div>
