fixed the header animation

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		</header>
 	</div>
 	<div class="titlebig">
-		<div id="titlebelow"><h1 class="otherh1">Design Evolution:</div>
+		<div id="titlebelow"><h1 class="otherh1">Design Evolution</h1><h1 id="bee">By Bee Bulgan</h1></div>
 		<div id="linksbig">
 		<a href="article-crime/index.html" id="designcrimelink"><div class="biglinkdiv"><h2>DESIGN & CRIME</h2> <h2>&#8594</h2></div></a>
 		<a href="article-factory/index.html" id="factorylink"><div class="biglinkdiv"><h2>GRAPHIC DESIGN'S FACTORY SETTINGS</h2> <h2>&#8594</h2></div></a>
