fixed the header animation for discipline article

--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -12,20 +12,68 @@
 	<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
-<!-- Main title -->
-		<header>
-			<div class="twocontentsheader">
-			<div class="headerdiv">
-			<h1 span id="top">The Concept of</h1>
-			<h2>Design <span id="discipline">Discipline</span></h2>
+		<div class="maindivhead">
+			<div class="headcontainer">
+			<header>
+				<div class="headertext">
+					<div class="crimetext">
+				<div class="crime">
+					<h1 class="crimeanimatedtextred">&nbsp;&nbsp;&nbsp;Crime</h1>
+					<h1 class="crimeanimatedtext">Crime</h1>
+					<h1 class="crimeanimatedtextred">Crime</h1>
+					<h1 class="crimeanimatedtext">Crime</h1>
+					<h1 class="crimeanimatedtextred">Crime</h1>
+					<h1 class="crimeanimatedtext">Crime</h1>
+					<h1 class="crimeanimatedtextred">Crime</h1>
+					<h1 class="crimeanimatedtext">Crime</h1>
+					<h1 class="crimeanimatedtextred">Crime</h1>
+					<h1 class="crimeanimatedtext">Crime</h1>
+				</div>
+				</div>
+				<div class="factorytext">
+				<div class="factory">
+					<h1 class="factoryanimatedtextyellow">&nbsp;&nbsp;&nbsp;Factory</h1>
+					<h1 class="factoryanimatedtext">Factory</h1>
+					<h1 class="factoryanimatedtextyellow">Factory</h1>
+					<h1 class="factoryanimatedtext">Factory</h1>
+					<h1 class="factoryanimatedtextyellow">Factory</h1>
+					<h1 class="factoryanimatedtext">Factory</h1>
+					<h1 class="factoryanimatedtextyellow">Factory</h1>
+				</div>
+				</div>
+				<div class="disciplinetext">
+				<div class="discipline">
+					<h1 class="disciplineanimatedtextpurple">&nbsp;&nbsp;&nbsp;Discipline</h1>
+					<h1 class="disciplineanimatedtext">Discipline</h1>
+					<h1 class="disciplineanimatedtextpurple">Discipline</h1>
+					<h1 class="disciplineanimatedtext">Discipline</h1>
+					<h1 class="disciplineanimatedtextpurple">Discipline</h1>
+					<h1 class="disciplineanimatedtext">Discipline</h1>
+					<h1 class="disciplineanimatedtextpurple">Discipline</h1>
+					<h1 class="disciplineanimatedtext">Discipline</h1>
+					<h1 class="disciplineanimatedtextpurple">Discipline</h1>
+				</div>
+				<div class="disciplinetext">
+						<div class="discipline">
+							<h1 class="evolutionanimatedtextblue">&nbsp;&nbsp;&nbsp;Evolution</h1>
+							<h1 class="evolutionanimatedtext">Evolution</h1>
+							<h1 class="evolutionanimatedtextblue">Evolution</h1>
+							<h1 class="evolutionanimatedtext">Evolution</h1>
+							<h1 class="evolutionanimatedtextblue">Evolution</h1>
+							<h1 class="evolutionanimatedtext">Evolution</h1>
+							<h1 class="evolutionanimatedtextblue">Evolution</h1>
+							<h1 class="evolutionanimatedtext">Evolution</h1>
+							<h1 class="evolutionanimatedtextblue">Evolution</h1>
+						</div>
+						</div>
+				</div>
+				
+				</div>
+			</header>
 		</div>
-		<div class="authordiv">
-			<h3 id="volume">Vol.1, 2017</h3>
-			<h3 id="author1">Paul A. Rodgers</h3>
-			<h3 id="author2">Craig Bremner</h3>
+		<div class="titlebig">
+			<div id="titlebelow"><h1 class="otherh1">Design Evolution</h1><h1 id="bee">By Bee Bulgan</h1></div>
 		</div>
-		</div>
-		</header>
 		<div class="navbardiv">
 			<div id="navbar">
 				<a href="https://bulganbee.github.io/binding/" class="mainlink">Home</a>
