added the author

--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -12,67 +12,84 @@
 	<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
+
 		<div class="maindivhead">
 			<div class="headcontainer">
 			<header>
 				<div class="headertext">
 					<div class="crimetext">
 				<div class="crime">
-					<h1 class="crimeanimatedtextred">&nbsp;&nbsp;&nbsp;Crime</h1>
-					<h1 class="crimeanimatedtext">Crime</h1>
-					<h1 class="crimeanimatedtextred">Crime</h1>
-					<h1 class="crimeanimatedtext">Crime</h1>
-					<h1 class="crimeanimatedtextred">Crime</h1>
-					<h1 class="crimeanimatedtext">Crime</h1>
-					<h1 class="crimeanimatedtextred">Crime</h1>
-					<h1 class="crimeanimatedtext">Crime</h1>
-					<h1 class="crimeanimatedtextred">Crime</h1>
-					<h1 class="crimeanimatedtext">Crime</h1>
+					<h1 class="crimeanimatedtextred">&nbsp;&nbsp;&nbsp;& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
 				</div>
 				</div>
 				<div class="factorytext">
 				<div class="factory">
-					<h1 class="factoryanimatedtextyellow">&nbsp;&nbsp;&nbsp;Factory</h1>
-					<h1 class="factoryanimatedtext">Factory</h1>
-					<h1 class="factoryanimatedtextyellow">Factory</h1>
-					<h1 class="factoryanimatedtext">Factory</h1>
-					<h1 class="factoryanimatedtextyellow">Factory</h1>
-					<h1 class="factoryanimatedtext">Factory</h1>
-					<h1 class="factoryanimatedtextyellow">Factory</h1>
+					<h1 class="factoryanimatedtextyellow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Crime</h1>
+					<h1 class="factoryanimatedtext">& Design</h1>
+					<h1 class="factoryanimatedtextyellow">Crime</h1>
+					<h1 class="factoryanimatedtext">& Design</h1>
+					<h1 class="factoryanimatedtextyellow">Crime</h1>
+					<h1 class="factoryanimatedtext">& Design</h1>
+					<h1 class="factoryanimatedtextyellow">Crime</h1>
+					<h1 class="factoryanimatedtext">& Design</h1>
+					<h1 class="factoryanimatedtextyellow">Crime</h1>
+					<h1 class="factoryanimatedtext">& Design</h1>
+					<h1 class="factoryanimatedtextyellow">Crime</h1>
+					<h1 class="factoryanimatedtext">& Design</h1>
+					<h1 class="factoryanimatedtextyellow">Crime</h1>
+					<h1 class="factoryanimatedtext">& Design</h1>
+					<h1 class="factoryanimatedtextyellow">Crime</h1>
+					<h1 class="factoryanimatedtext">& Design</h1>
+					<h1 class="factoryanimatedtextyellow">Crime</h1>
+					<h1 class="factoryanimatedtext">& Design</h1>
 				</div>
 				</div>
 				<div class="disciplinetext">
 				<div class="discipline">
-					<h1 class="disciplineanimatedtextpurple">&nbsp;&nbsp;&nbsp;Discipline</h1>
-					<h1 class="disciplineanimatedtext">Discipline</h1>
-					<h1 class="disciplineanimatedtextpurple">Discipline</h1>
-					<h1 class="disciplineanimatedtext">Discipline</h1>
-					<h1 class="disciplineanimatedtextpurple">Discipline</h1>
-					<h1 class="disciplineanimatedtext">Discipline</h1>
-					<h1 class="disciplineanimatedtextpurple">Discipline</h1>
-					<h1 class="disciplineanimatedtext">Discipline</h1>
-					<h1 class="disciplineanimatedtextpurple">Discipline</h1>
+					<h1 class="crimeanimatedtextred">&nbsp;&nbsp;&nbsp;& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
 				</div>
-				<div class="disciplinetext">
-						<div class="discipline">
-							<h1 class="evolutionanimatedtextblue">&nbsp;&nbsp;&nbsp;Evolution</h1>
-							<h1 class="evolutionanimatedtext">Evolution</h1>
-							<h1 class="evolutionanimatedtextblue">Evolution</h1>
-							<h1 class="evolutionanimatedtext">Evolution</h1>
-							<h1 class="evolutionanimatedtextblue">Evolution</h1>
-							<h1 class="evolutionanimatedtext">Evolution</h1>
-							<h1 class="evolutionanimatedtextblue">Evolution</h1>
-							<h1 class="evolutionanimatedtext">Evolution</h1>
-							<h1 class="evolutionanimatedtextblue">Evolution</h1>
-						</div>
-						</div>
 				</div>
-				
 				</div>
 			</header>
 		</div>
-		<div class="titlebig">
-			<div id="titlebelow"><h1 class="otherh1">Design Evolution</h1><h1 id="bee">By Bee Bulgan</h1></div>
+	</div>
+	<div class="authordiv">
+		<h3 id="volume">Hal Foster</h3>
+		<h3 id="author1">Ch.2, 2002</h3>
 		</div>
 		<div class="navbardiv">
 			<div id="navbar">
