added css changes to crime article

--- a/article-crime/index.html
+++ b/article-crime/index.html
@@ -2,47 +2,108 @@
 <html lang="en">
 <html>
 	<head>
+		<title>Binding</title>
 	<!--Below is a meta element that tells the browser to render it at its actual size-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Below is a reset, it clears off browser's default style -->
 	<link href="../reset.css" rel="stylesheet">
 	<!-- Below is a link to my CSS file -->
-	<link href="../common.css" rel="stylesheet">
+	<link href="../common.css" rel="stylesheet"> 
 	<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
-<!-- Main title -->
-	<header>
-	<div class="twocontentsheader">
-	<div class="headerdiv">
-		<div id="designandcrimetitle">
-	<h1 span id="top">Design &</h1>
-	<h2><span id="crime">Crime</span></h2>
-	</div>
-	<h1 id="andother">& Other Diatribes</h1>
-	</div>
-	<div class="authordiv">
-	<h3 id="volume">Ch.2, 2000</h3>
-	<h3 id="author1">Hal Foster</h3>
-	</div>
-	</div>
-	</header>
-	<div class="navbardiv">
-		<div id="navbar">
-			<a href="https://bulganbee.github.io/binding/" class="mainlink">Home</a>
-			<a href="https://bulganbee.github.io/binding/article-crime/index.html" class="mainlink"><mark>Crime</mark></a>
-			<a href="https://bulganbee.github.io/binding/article-factory/index.html" class="mainlink">Factory</a>
-			<a href="https://bulganbee.github.io/binding/article-discipline/index.html" class="mainlink">Discipline</a>
-			<a href="#top" class="mainlink">&#8593;</a>
-		  </div>
+
+		<div class="maindivhead">
+			<div class="headcontainer">
+			<header>
+				<div class="headertext">
+					<div class="crimetext">
+				<div class="crime">
+					<h1 class="crimeanimatedtextred">&nbsp;&nbsp;&nbsp;& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+				</div>
+				</div>
+				<div class="factorytext">
+				<div class="factory">
+					<h1 class="factoryanimatedtextyellow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Crime</h1>
+					<h1 class="factoryanimatedtext">& Design</h1>
+					<h1 class="factoryanimatedtextyellow">Crime</h1>
+					<h1 class="factoryanimatedtext">& Design</h1>
+					<h1 class="factoryanimatedtextyellow">Crime</h1>
+					<h1 class="factoryanimatedtext">& Design</h1>
+					<h1 class="factoryanimatedtextyellow">Crime</h1>
+					<h1 class="factoryanimatedtext">& Design</h1>
+					<h1 class="factoryanimatedtextyellow">Crime</h1>
+					<h1 class="factoryanimatedtext">& Design</h1>
+					<h1 class="factoryanimatedtextyellow">Crime</h1>
+					<h1 class="factoryanimatedtext">& Design</h1>
+					<h1 class="factoryanimatedtextyellow">Crime</h1>
+					<h1 class="factoryanimatedtext">& Design</h1>
+					<h1 class="factoryanimatedtextyellow">Crime</h1>
+					<h1 class="factoryanimatedtext">& Design</h1>
+					<h1 class="factoryanimatedtextyellow">Crime</h1>
+					<h1 class="factoryanimatedtext">& Design</h1>
+				</div>
+				</div>
+				<div class="disciplinetext">
+				<div class="discipline">
+					<h1 class="crimeanimatedtextred">&nbsp;&nbsp;&nbsp;& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+				</div>
+				</div>
+				</div>
+			</header>
 		</div>
+	<div class="authordiv">
+		<h3 id="volume">Hal Foster</h3>
+		<h3 id="author1">Ch.2, 2002</h3>
+		</div>
+	</div>
+		<div class="navbardiv">
+			<div id="navbar">
+				<a href="https://bulganbee.github.io/binding/" class="mainlink">Home</a>
+				<a href="https://bulganbee.github.io/binding/article-crime/index.html" class="mainlink">Crime</a>
+				<a href="https://bulganbee.github.io/binding/article-factory/index.html" class="mainlink">Factory</a>
+				<a href="https://bulganbee.github.io/binding/article-discipline/index.html" class="mainlink"><mark>Discipline</mark></a>
+				<a href="#top" class="mainlink">&#8593;</a>
+			  </div>
 			</div>
-		  <!-- <div id="backtotop"> -->
-			<!-- <a href="#top" span id="arrow">&#x21E7;</a> -->
-		<!-- </div> -->
-	<!-- Article for Crime and Design -->
+	<!-- Article for The Concept Of The Design Discipline -->
 	 <article>
-		<section class="normal">
+		<div class="stickytitle"><h3>Introduction</h3></div>
+	<section>
 				<p>The turn of one century calls up others, and 2000 was no exception. Over the last few years <i>Style 1900</i> or Art Nouveau has returned with a vengeance in museum shows and academic books. It all seems long ago and far away, this pan-European movement pledged to a <i>Gesamtkunstwerk</i> or “total work” of arts and crafts, in which everything from architecture to ashtrays was subject to a florid kind of decoration, in which the designer struggled to impress his subjectivity on all sorts of objects through an idiom of vitalist line — as if to inhabit the thing in this crafted way was to resist the advance of industrial reification somehow. </p>
 			<section class="withbackground">
 				<p>As the aesthetics of the machine became dominant in the 1920s, Art Nouveau was no longer <i>nouveau</i>, and in the next decades it slowly passed from an outmoded style to a campy one, and it has lingered in this limbo ever since. Yet what struck me, in the midst of this recent parade of Art Nouveau manifestations, was its strong echo in the present</p>
