edited the header animation for discipline

--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -19,76 +19,76 @@
 				<div class="headertext">
 					<div class="crimetext">
 				<div class="crime">
-					<h1 class="crimeanimatedtextred">&nbsp;&nbsp;&nbsp;& Other Diatribes</h1>
-					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">&nbsp;&nbsp;&nbsp;The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtext">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtextred">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtext">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtextred">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtext">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtextred">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtext">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtextred">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtext">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtextred">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtext">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtextred">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtext">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtextred">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtext">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtextred">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtext">The Concept Of The Design Discipline</h1>
 				</div>
 				</div>
 				<div class="factorytext">
 				<div class="factory">
-					<h1 class="factoryanimatedtextyellow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Crime</h1>
-					<h1 class="factoryanimatedtext">& Design</h1>
-					<h1 class="factoryanimatedtextyellow">Crime</h1>
-					<h1 class="factoryanimatedtext">& Design</h1>
-					<h1 class="factoryanimatedtextyellow">Crime</h1>
-					<h1 class="factoryanimatedtext">& Design</h1>
-					<h1 class="factoryanimatedtextyellow">Crime</h1>
-					<h1 class="factoryanimatedtext">& Design</h1>
-					<h1 class="factoryanimatedtextyellow">Crime</h1>
-					<h1 class="factoryanimatedtext">& Design</h1>
-					<h1 class="factoryanimatedtextyellow">Crime</h1>
-					<h1 class="factoryanimatedtext">& Design</h1>
-					<h1 class="factoryanimatedtextyellow">Crime</h1>
-					<h1 class="factoryanimatedtext">& Design</h1>
-					<h1 class="factoryanimatedtextyellow">Crime</h1>
-					<h1 class="factoryanimatedtext">& Design</h1>
-					<h1 class="factoryanimatedtextyellow">Crime</h1>
-					<h1 class="factoryanimatedtext">& Design</h1>
+					<h1 class="factoryanimatedtextyellow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Discipline</h1>
+					<h1 class="factoryanimatedtext">Design</h1>
+					<h1 class="factoryanimatedtextyellow">Discipline</h1>
+					<h1 class="factoryanimatedtext">Design</h1>
+					<h1 class="factoryanimatedtextyellow">Discipline</h1>
+					<h1 class="factoryanimatedtext">Design</h1>
+					<h1 class="factoryanimatedtextyellow">Discipline</h1>
+					<h1 class="factoryanimatedtext">Design</h1>
+					<h1 class="factoryanimatedtextyellow">Discipline</h1>
+					<h1 class="factoryanimatedtext">Design</h1>
+					<h1 class="factoryanimatedtextyellow">Discipline</h1>
+					<h1 class="factoryanimatedtext">Design</h1>
+					<h1 class="factoryanimatedtextyellow">Discipline</h1>
+					<h1 class="factoryanimatedtext">Design</h1>
+					<h1 class="factoryanimatedtextyellow">Discipline</h1>
+					<h1 class="factoryanimatedtext">Design</h1>
+					<h1 class="factoryanimatedtextyellow">Discipline</h1>
+					<h1 class="factoryanimatedtext">Design</h1>
 				</div>
 				</div>
 				<div class="disciplinetext">
 				<div class="discipline">
-					<h1 class="crimeanimatedtextred">&nbsp;&nbsp;&nbsp;& Other Diatribes</h1>
-					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtextred">& Other Diatribes</h1>
-					<h1 class="crimeanimatedtext">& Other Diatribes</h1>
+					<h1 class="crimeanimatedtextred">&nbsp;&nbsp;&nbsp;The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtext">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtextred">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtext">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtextred">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtext">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtextred">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtext">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtextred">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtext">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtextred">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtext">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtextred">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtext">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtextred">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtext">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtextred">The Concept Of The Design Discipline</h1>
+					<h1 class="crimeanimatedtext">The Concept Of The Design Discipline</h1>
 				</div>
 				</div>
 				</div>
 			</header>
 		</div>
 	<div class="authordiv">
-		<h3 id="volume">Hal Foster</h3>
-		<h3 id="author1">Ch.2, 2002</h3>
+		<h3 id="volume">Paul A. Rodgers,<br>Craig Bremner</h3>
+		<h3 id="author1">Volume I, Issue 1, 2017</h3>
 		</div>
 	</div>
 		<div class="navbardiv">
