--- a/article-factory/index.html
+++ b/article-factory/index.html
@@ -2,41 +2,105 @@
 <html lang="en">
 <html>
 	<head>
+		<title>Binding</title>
 	<!--Below is a meta element that tells the browser to render it at its actual size-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Below is a reset, it clears off browser's default style -->
 	<link href="../reset.css" rel="stylesheet">
 	<!-- Below is a link to my CSS file -->
-	<link href="../common.css" rel="stylesheet">
+	<link href="../common.css" rel="stylesheet"> 
 	<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
-		<!-- Main title -->
-		<header>
-			<div class="twocontentsheader">
-			<div class="headerdiv">
-			<h1 span id="top">Graphic Design's</h1>
-			<h2><span id="factory">Factory</span> <span id="settings">Settings</span></h2>
+
+		<div class="maindivhead">
+			<div class="headcontainer">
+			<header>
+				<div class="headertext">
+					<div class="crimetext">
+				<div class="crime">
+					<h1 class="crimeanimatedtextred">&nbsp;&nbsp;&nbsp;Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtext">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtextred">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtext">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtextred">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtext">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtextred">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtext">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtextred">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtext">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtextred">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtext">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtextred">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtext">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtextred">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtext">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtextred">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtext">Graphic Design’s Factory Settings</h1>
+				</div>
+				</div>
+				<div class="factorytext">
+				<div class="factory">
+					<h1 class="factoryanimatedtextyellow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Factory</h1>
+					<h1 class="factoryanimatedtext">Settings</h1>
+					<h1 class="factoryanimatedtextyellow">Factory</h1>
+					<h1 class="factoryanimatedtext">Settings</h1>
+					<h1 class="factoryanimatedtextyellow">Factory</h1>
+					<h1 class="factoryanimatedtext">Settings</h1>
+					<h1 class="factoryanimatedtextyellow">Factory</h1>
+					<h1 class="factoryanimatedtext">Settings</h1>
+					<h1 class="factoryanimatedtextyellow">Factory</h1>
+					<h1 class="factoryanimatedtext">Settings</h1>
+					<h1 class="factoryanimatedtextyellow">Factory</h1>
+					<h1 class="factoryanimatedtext">Settings</h1>
+					<h1 class="factoryanimatedtextyellow">Factory</h1>
+					<h1 class="factoryanimatedtext">Settings</h1>
+					<h1 class="factoryanimatedtextyellow">Factory</h1>
+					<h1 class="factoryanimatedtext">Settings</h1>
+					<h1 class="factoryanimatedtextyellow">Factory</h1>
+					<h1 class="factoryanimatedtext">Settings</h1>
+				</div>
+				</div>
+				<div class="disciplinetext">
+				<div class="discipline">
+					<h1 class="crimeanimatedtextred">&nbsp;&nbsp;&nbsp;Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtext">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtextred">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtext">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtextred">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtext">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtextred">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtext">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtextred">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtext">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtextred">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtext">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtextred">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtext">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtextred">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtext">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtextred">Graphic Design’s Factory Settings</h1>
+					<h1 class="crimeanimatedtext">Graphic Design’s Factory Settings</h1>
+				</div>
+				</div>
+				</div>
+			</header>
 		</div>
-		<div class="authordiv">
-			<h3 id="volume">2020</h3>
-			<h3 id="author1">Jacob Lindgren</h3>
+	<div class="authordiv">
+		<h3 id="volume">Jacob Lindgren</h3>
+		<h3 id="author1">2020</h3>
 		</div>
-		</div>
-		</header>
+	</div>
 		<div class="navbardiv">
 			<div id="navbar">
 				<a href="https://bulganbee.github.io/binding/" class="mainlink">Home</a>
 				<a href="https://bulganbee.github.io/binding/article-crime/index.html" class="mainlink">Crime</a>
-				<a href="https://bulganbee.github.io/binding/article-factory/index.html" class="mainlink"><mark>Factory</mark></a>
-				<a href="https://bulganbee.github.io/binding/article-discipline/index.html" class="mainlink">Discipline</a>
+				<a href="https://bulganbee.github.io/binding/article-factory/index.html" class="mainlink">Factory</a>
+				<a href="https://bulganbee.github.io/binding/article-discipline/index.html" class="mainlink"><mark>Discipline</mark></a>
 				<a href="#top" class="mainlink">&#8593;</a>
 			  </div>
-			<!-- </div> -->
-		  <!-- <div id="backtotop"> -->
-			<!-- <a href="#top" span id="arrow">&#x21E7;</a> -->
-		<!-- </div> -->
-	<!-- Article for Factory Settings -->
+			</div>
+	<!-- Article for The Concept Of The Design Discipline -->
 	 <article>
 		<section>
 			<div class="quote">
