added footer and edited colophon

--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
 				<p>Design education not only teaches its technical and historical canon, or how to design, but more importantly teaches students how to be designers in society and in relation to capital,” writes designer Jacob Lindgren. “A school becomes a factory producing designers, one that, in keeping with the principles of ‘good design,’ turns them into efficient and interchangeable parts ready to hit the market.” In a new essay, Lindgren proposes models that may help us undo this factory setting of graphic design.</p>
 			</section>
 			<section class="colophonesection">
-			<div class="colophone"><p id="colophoneparagraph">This is a colophone: nce the early 20th century, design has shifted from being viewed as a decorative luxury for the wealthy to becoming an accessible, everyday functional commodity due toan accessible, everyday functional commodity due to</p>
+			<div class="colophon"><p id="colophonparagraph">This is a colophone: nce the early 20th century, design has shifted from being viewed as a decorative luxury for the wealthy to becoming an accessible, everyday functional commodity due toan accessible, everyday functional commodity due to</p>
 				</div>
 			</section>
 	</article>
 	<footer>
-		<h5>Website by Bulgan Bee</h5>
+		<h5>Website by Bulgan Bee, @2024</h5>
 	</footer>
 	</body>
 </html>
