Edited mark colors and hover colors

--- a/article-crime/index.html
+++ b/article-crime/index.html
@@ -94,9 +94,9 @@
 		<div class="navbardiv">
 			<div id="navbar">
 				<a href="https://bulganbee.github.io/binding/" class="mainlink">Home</a>
-				<a href="https://bulganbee.github.io/binding/article-crime/index.html" class="mainlink">Crime</a>
+				<a href="https://bulganbee.github.io/binding/article-crime/index.html" class="mainlink"><mark>Crime</mark></a>
 				<a href="https://bulganbee.github.io/binding/article-factory/index.html" class="mainlink">Factory</a>
-				<a href="https://bulganbee.github.io/binding/article-discipline/index.html" class="mainlink"><mark>Discipline</mark></a>
+				<a href="https://bulganbee.github.io/binding/article-discipline/index.html" class="mainlink">Discipline</a>
 				<a href="#top" class="mainlink">&#8593;</a>
 			  </div>
 			</div>
@@ -139,5 +139,8 @@
 				<a href="../article-factory/index.html" id="nextreadlink"><h2 span id="nextarticle">Graphic Design’s Factory Settings</h2></a>
 			</section>
 			</article>
+			<footer>
+				<h5>Website by Bulgan Bee, @2024</h5>
+			</footer>
 	</body>
 </html>
