Edited read next on crime article

--- a/article-crime/index.html
+++ b/article-crime/index.html
@@ -134,13 +134,39 @@
 			<section class="normal">
 				<p>This is why Loos opposes not only the total design of Art Nouveau but also its wanton subjectivism (“individuality expressed in every nail”). Neither Loos nor Kraus says anything about a natural “essence” of art, or an absolute “autonomy” of culture; the stake is one of “distinctions” and “running-room,” of proposed differences and provisional spaces.</p>
 			</section>
-			<section class="readnext">
-				<h3 span id="readnexttext">Read next</h3>
-				<a href="../article-factory/index.html" id="nextreadlink"><h2 span id="nextarticle">Graphic Design’s Factory Settings</h2></a>
-			</section>
 			</article>
-			<footer>
-				<h5>Website by Bulgan Bee, @2024</h5>
-			</footer>
+			<div class="headcontainer">
+				<div class="readnextanimated">
+					<div class="headertext">
+						<div class="crimetext">
+					<div class="nexttext">
+						<h1 class="readnexttext">&nbsp;&nbsp;&nbsp;Read next</h1>
+					</div>
+					</div>
+					<div class="factorytext">
+					<div class="factory">
+						<h1 class="settingstextblue">&nbsp;&nbsp;&nbsp;&nbsp;Factory</h1>
+						<h1 class="settingsanimatedtext">Settings</h1>
+						<h1 class="settingstextblue">Factory</h1>
+						<h1 class="settingsanimatedtext">Settings</h1>
+						<h1 class="settingstextblue">Factory</h1>
+						<h1 class="settingsanimatedtext">Settings</h1>
+						<h1 class="settingstextblue">Factory</h1>
+						<h1 class="settingsanimatedtext">Settings</h1>
+						<h1 class="settingstextblue">Factory</h1>
+						<h1 class="settingsanimatedtext">Settings</h1>
+						<h1 class="settingstextblue">Factory</h1>
+						<h1 class="settingsanimatedtext">Settings</h1>
+						<h1 class="settingstextblue">Factory</h1>
+						<h1 class="settingsanimatedtext">Settings</h1>
+						<h1 class="settingstextblue">Factory</h1>
+						<h1 class="settingsanimatedtext">Settings</h1>
+						<h1 class="settingstextblue">Factory</h1>
+						<h1 class="settingsanimatedtext">Settings</h1>
+					</div>
+					</div>
+					</div>
+				</div>
+			
 	</body>
 </html>
