--- a/article-factory/index.html
+++ b/article-factory/index.html
@@ -225,10 +225,38 @@
 				<p class="important">To end where we began: Vilém Flusser described the factory’s mode of production as “turning,” in that manufacturing is “turning what is available in the environment to one’s own advantage, turning it into something manufactured, turning it over to use and thus turning it to account.”<sup>25</sup></p>
 				<p>A long-standing mystery surrounding the Workings Leaving the Factory film is where exactly the workers are headed as they exit through the factory’s front gates. (“To a meeting? To the barricades? Or simply home?”).26 If the school is a factory, and the educational turn allows us to examine the conditions of our own manufacturing, or our “turning” as Flusser puts it—as we exit, where should we turn?</p>
 			</section>
-			<section class="readnext">
-				<h3 span id="readnexttext">Read next</h3>
-				<h2 span id="nextarticle">The Concept Of The Design Discipline</h2>
-			</section>
 			</article>
+			<div class="headcontainer">
+				<div class="readnextanimated">
+					<div class="headertext">
+						<div class="crimetext">
+					<div class="nexttext">
+						<h1 class="readnexttext">&nbsp;&nbsp;&nbsp;Read next</h1>
+					</div>
+					</div>
+					<div class="factorytext">
+					<div class="factory">
+						<h1 class="factoryanimatedtextyellow">&nbsp;&nbsp;&nbsp;&nbsp;Crime</h1>
+						<h1 class="factoryanimatedtext">& Design</h1>
+						<h1 class="factoryanimatedtextyellow">Crime</h1>
+						<h1 class="factoryanimatedtext">& Design</h1>
+						<h1 class="factoryanimatedtextyellow">Crime</h1>
+						<h1 class="factoryanimatedtext">& Design</h1>
+						<h1 class="factoryanimatedtextyellow">Crime</h1>
+						<h1 class="factoryanimatedtext">& Design</h1>
+						<h1 class="factoryanimatedtextyellow">Crime</h1>
+						<h1 class="factoryanimatedtext">& Design</h1>
+						<h1 class="factoryanimatedtextyellow">Crime</h1>
+						<h1 class="factoryanimatedtext">& Design</h1>
+						<h1 class="factoryanimatedtextyellow">Crime</h1>
+						<h1 class="factoryanimatedtext">& Design</h1>
+						<h1 class="factoryanimatedtextyellow">Crime</h1>
+						<h1 class="factoryanimatedtext">& Design</h1>
+						<h1 class="factoryanimatedtextyellow">Crime</h1>
+						<h1 class="factoryanimatedtext">& Design</h1>
+					</div>
+					</div>
+					</div>
+				</div>
 	</body>
 </html>
